--- a/webpack/public/index.html
+++ b/webpack/public/index.html
@@ -10,6 +10,7 @@
   <div class="box">
       <h1>WebPack</h1>
       <p>这是一个p</p>
+      <button id="btn">点击</button>
   </div>
 
   <!-- <script src="../dist/static/js/main.js"></script> -->
